--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉小鹿乃</title>
-    <meta itemprop="name" content="吃掉小鹿乃" />
+    <title>音游小蜘蛛</title>
+    <meta itemprop="name" content="音游小蜘蛛" />
     <meta itemprop="description" content="新概念音游" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -35,7 +35,7 @@
         <div style="margin:0 8% 0 9%;">
             <div style="font-size:2.6em; color:#FEF002;">新概念音游</div><br />
             <div id="desc" style="display: block;font-size:2.2em; color:#fff; line-height:1.5em;">
-                从最底下的开始<br />
+                从最底下的小蜘蛛开始<br />
                 看你能得多少分<br />
             </div>
             <br />
@@ -66,7 +66,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">标题</span>
                     </div>
-                    <input type="text" id="title" class="form-control" placeholder="吃掉小鹿乃">
+                    <input type="text" id="title" class="form-control" placeholder="音游小蜘蛛">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
